spl_frontend/src/parser/tests/snapshots/spl_frontend__parser__tests__incremental__destroy_proc.snap
---
source: spl_frontend/src/parser/tests/incremental.rs
expression: ast
---
Program {
    global_declarations: [
        Reference {
            reference: Procedure(
                ProcedureDeclaration {
                    doc: [],
                    name: Some(
                        Identifier {
                            value: "a",
                            info: AstInfo {
                                range: 1..2,
                                errors: [],
                            },
                        },
                    ),
                    parameters: [],
                    variable_declarations: [],
                    statements: [],
                    info: AstInfo {
                        range: 0..6,
                        errors: [],
                    },
                },
            ),
            offset: 0,
        },
        Reference {
            reference: Error(
                AstInfo {
                    range: 0..5,
                    errors: [
                        SplError(
                            0..5,
                            "unexpected `b(){}`\n",
                        ),
                    ],
                },
            ),
            offset: 6,
        },
        Reference {
            reference: Procedure(
                ProcedureDeclaration {
                    doc: [],
                    name: Some(
                        Identifier {
                            value: "main",
                            info: AstInfo {
                                range: 1..2,
                                errors: [],
                            },
                        },
                    ),
                    parameters: [],
                    variable_declarations: [],
                    statements: [],
                    info: AstInfo {
                        range: 0..6,
                        errors: [],
                    },
                },
            ),
            offset: 11,
        },
    ],
    info: AstInfo {
        range: 0..17,
        errors: [],
    },
}
